CSS fix to tidy up the table view on the landing pages, preventing long variable names from breaking the view.

--- a/koala/static/css/koala.css
+++ b/koala/static/css/koala.css
@@ -1543,7 +1543,8 @@ textarea.hidden.debug { display: block; }
 
 /* ----------------------------------------- Tables
 ----------------------------------------- */
-table.table tr td { vertical-align: top; }
+table.table { table-layout: fixed; }
+table.table tr td { vertical-align: top; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; }
 
 /* ----------------------------------------- Footer
 ----------------------------------------- */
