--- a/koala/static/sass/koala.scss
+++ b/koala/static/sass/koala.scss
@@ -728,6 +728,9 @@ table.table {
         overflow: hidden;
         white-space: nowrap;
     }
+    .no-overflow {
+        overflow: visible;
+    }
 }
 
 
