Adding "white-space: normal" to prevent the dropdown menu from not wrapping within

--- a/koala/static/css/koala.css
+++ b/koala/static/css/koala.css
@@ -1545,7 +1545,7 @@ textarea.hidden.debug { display: block; }
 ----------------------------------------- */
 table.table { table-layout: fixed; }
 table.table tr td { vertical-align: top; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; }
-table.table .no-overflow { overflow: visible; }
+table.table .no-overflow { overflow: visible; white-space: normal; }
 
 /* ----------------------------------------- Footer
 ----------------------------------------- */
