Adding the CSS class for volume deleting and deleted status

--- a/eucaconsole/static/css/pages/volume.css
+++ b/eucaconsole/static/css/pages/volume.css
@@ -109,6 +109,10 @@
 
 .status.in-use { background-color: darkorange; }
 
+.status.deleting { background-color: #777777; }
+
+.status.deleted { background-color: #777777; }
+
 .reveal-modal #device { width: 10rem; }
 
 .tile { background-color: white; border: 1px solid #cccccc; width: 190px; height: 160px; }
